# estoppl

./: .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json  run.js
src/: main.rs  verify_cert.rs
src/config/: mod.rs
src/dashboard/: mod.rs
src/dashboard/static/: index.html
src/identity/: mod.rs
src/ledger/: event.rs  local.rs
src/mcp/: types.rs
src/policy/: mod.rs
src/proxy/: http.rs  mod.rs  stdio.rs
src/report/: mod.rs
src/review/: mod.rs
src/sync/: mod.rs
src/wrap/: mod.rs
tests/: integration.rs
